tests/error/py_errors/python_err.py
from guppy.decorator import guppy


@guppy
def foo() -> int:
    return py(1 / 0)
